--- a/portfolio_site_project/blog/templates/blog/all_blogs.html
+++ b/portfolio_site_project/blog/templates/blog/all_blogs.html
@@ -1,8 +1,8 @@
-<h1>Hello blog</h1>
+<h1>Привет блог</h1>
 
 {% for blog in blogs %}
 
-<a href="#"><h2>{{ blog.title }}</h2></a>
+<a href="{% url 'blog:detail' blog.id %}"><h2>{{ blog.title }}</h2></a>
 <h5>{{ blog.date }}</h5>
 <p>{{ blog.description }}</p>
 
