--- a/portfolio_site_project/portfolio/templates/portfolio/home.html
+++ b/portfolio_site_project/portfolio/templates/portfolio/home.html
@@ -1,6 +1,11 @@
-<h1>Bors1k's portfolio</h1>
+<h1>Bors1k's портфолио</h1>
+{% load static %}
+
+<a href="{% static 'portfolio/Resume.pdf' %}" >Мое резюме</a>
+<img src="{% static 'portfolio/mainphoto.jpg' %}" width="25%">
 
 {% for proj in projects %}
+
 
 <h2>{{proj.title}}</h2>
 <p>{{proj.description}}</p>
