--- a/portfolio_site_project/blog/templates/blog/all_blogs.html
+++ b/portfolio_site_project/blog/templates/blog/all_blogs.html
@@ -1,9 +1,9 @@
 <h1>Привет блог</h1>
-
+<a href="{% url 'startpage:home' %}">Стартовая страница</a>
 {% for blog in blogs %}
 
 <a href="{% url 'blog:detail' blog.id %}"><h2>{{ blog.title }}</h2></a>
 <h5>{{ blog.date }}</h5>
-<p>{{ blog.description }}</p>
+<p>{{ blog.description | striptags | truncatechars:100 }}</p>
 
-{% endfor%}
+{% endfor %}
