--- a/portfolio_site_project/blog/templates/blog/all_blogs.html
+++ b/portfolio_site_project/blog/templates/blog/all_blogs.html
@@ -1,9 +1,18 @@
-<h1>Привет блог</h1>
-<a href="{% url 'startpage:home' %}">Стартовая страница</a>
-{% for blog in blogs %}
+{% extends 'portfolio/base.html' %}
+{% block content %}
+    <div class="container">
+        <h1 id="blogtitle" class="font-weight-bold text-center">Blog</h1>
+        {% for blog in blogs %}
+        <div class="row justify-content-center my-3">
+        <div class="col-md-10">
+            <a href="{% url 'blog:detail' blog.id %}">
+            <h2>{{ blog.title }}</h2>
+            </a>
+            <h5 class="text-muted">{{ blog.date|date:'M d Y'|upper }}</h5>
+            <h4>{{ blog.description|striptags|truncatechars:100 }}</h4>
+        </div>
+        </div>
+        {% endfor %}
+    </div>
 
-<a href="{% url 'blog:detail' blog.id %}"><h2>{{ blog.title }}</h2></a>
-<h5>{{ blog.date }}</h5>
-<p>{{ blog.description | striptags | truncatechars:100 }}</p>
-
-{% endfor %}
+{% endblock content %}
